# windermere-bloom-ml

./: .gitattributes  .gitignore  LICENSE  README.md  api_endpoints.md  pyproject.toml  pytest.ini
config/: api.yaml  determinands.yaml  features_v1.yaml  windermere_scope.yaml
data/clean/: wide_features_base.parquet
docs/: api_contract_observation.md  api_endpoints.md  decision_log.md  feature_domain_map.md  feature_registry.md  feature_strategy.md  project_overview.md  target_definition.md
scripts/: build_features_v1.py  check_feature_parity.py  make_wide_table.py  run_phase2_build_features.py  run_phase2_feature_qc.py  run_phase2_viability_gate.py  run_phase3_baselines.py  run_phase3_correlation_analysis.py  run_phase3_seasonality_exploration.py
src/ingestion/: data_ingestor.py
src/windermere_project/: cli.py
src/windermere_project/baselines/: __init__.py  baseline_models.py  evaluate_baselines.py
src/windermere_project/clean/: builder.py  config.py  run_clean.py
src/windermere_project/eda/: __init__.py  viability_gate.py
src/windermere_project/features/: build_feature_matrix.py  feature_builder.py
src/windermere_project/ingestion/: data_ingestor.py  determinands_discovery.py  run_ingestion.py  run_ingestion_all.py  run_ingestion_point_all.py  schemas.py  snapshot_raw.py
src/windermere_project/labels/: __init__.py  (+1 more)
tests/: test_baselines.py  test_clean_layer.py  test_feature_matrix_builder.py  test_features_leakage.py  test_imports.py  test_label_builder.py  test_schema_validation.py  test_snapshot_raw_smoke.py  test_viability_gate.py
